--- a/styleCwatch.css
+++ b/styleCwatch.css
@@ -1,16 +1,20 @@
-.header_menu_item{display: inline-block; padding:20px; text-decoration: none;}
-.header_menu_item a:hover{color: #fff;display: block;padding: 15px;}
-.header_menu_item a:hover{background:#000;}
+header{background-color: #264a2f;}
+
+.header_menu_item {display: inline-block; padding:20px; text-decoration: none; color: #fff;}
+a{text-decoration: none; color: #fff;}
+.header_menu_item a:hover{color: #fff;display: block;}
+.header_menu_item a:hover{background: #51855e; padding: 10px;}
 .header_icon_bar{display: block; float: right; padding: 20px; display: none;}
 .header_icon_bar span{display: block; height:3px; width:30px; background: #fff; margin-bottom: 5px;}
 
 .menu-container{border: 2px; margin:0px; overflow: hidden; }
 .menu-container{float:right; margin: 0px; padding: 0px;}
+.contenitore-titolo{background-color: #51855e;}
+.contenitore-main{background-color: #51855e; height: 100%;}
+.footer-container{text-align:right; border: 5px; margin:0px; padding:20px;background-color: #264a2f;}
+.footer-container li{color:#fff; display: inline-block;}
 
-.header_menu_item{display:block;}
-.menu-container{width:100%; height: 0px; overflow: hidden;}
-.is-open{height:767px ; overflow: auto;}
-
+.cover{color: #fff; text-align: center; font-family: "Papyrus"; margin: 0%; padding: auto;}
 .clearfix:after {
     visibility: hidden;
     display: block;
