--- a/styleCwatch.css
+++ b/styleCwatch.css
@@ -1,20 +1,34 @@
-header{background-color: #264a2f;}
+html,body{ height:100%; width:100%;}
 
-.header_menu_item {display: inline-block; padding:20px; text-decoration: none; color: #fff;}
-a{text-decoration: none; color: #fff;}
+a{text-decoration: none; color: #ffffff;}
+
+
+.header_menu_item {display: inline-block; padding:20px; text-decoration: none; }
 .header_menu_item a:hover{color: #fff;display: block;}
 .header_menu_item a:hover{background: #51855e; padding: 10px;}
-.header_icon_bar{display: block; float: right; padding: 20px; display: none;}
+.header_icon_bar{display: block; float: left; padding: 20px; display: none;}
 .header_icon_bar span{display: block; height:3px; width:30px; background: #fff; margin-bottom: 5px;}
 
-.menu-container{border: 2px; margin:0px; overflow: hidden; }
-.menu-container{float:right; margin: 0px; padding: 0px;}
-.contenitore-titolo{background-color: #51855e;}
-.contenitore-main{background-color: #51855e; height: 100%;}
-.footer-container{text-align:right; border: 5px; margin:0px; padding:20px;background-color: #264a2f;}
-.footer-container li{color:#fff; display: inline-block;}
+.menu-container{border: 2px; margin:0px; overflow: hidden;background-color: #264a2f; }
 
-.cover{color: #fff; text-align: center; font-family: "Papyrus"; margin: 0%; padding: auto;}
+
+.cover_copy{background-color: #51855e; height:36px;}
+.cover_copy h1{color: #fff; text-align: center; font-family: "Papyrus";  margin:0px;}
+
+.footer-container { text-align: center; border: 5px; margin:0px; padding:20px;background-color: #264a2f;}
+.footer-container li{color:#fff; display: inline-block; }
+
+
+@media(max-width: 767px){
+    .header{position: fixed; z-index: 100; width: 100%;}
+    .header_icon_bar{display: block;}
+    .header_menu_item{display:block;}
+    .menu-container{width:100%; height: 0px; overflow: hidden;}
+    .is-open{height:767px ; overflow: auto;} 
+    .cover_copy{height: 50px;}
+    .cover_copy h1{padding: 9px}
+
+}
 .clearfix:after {
     visibility: hidden;
     display: block;
