--- a/styleCwach.css
+++ b/styleCwach.css
@@ -1,22 +1,30 @@
+html,body{ height:100%; width:100%;}
 header{background-color: #264a2f;}
+li,a{text-decoration: none; color: #fff;}
 
-.header_menu_item {display: inline-block; padding:20px; text-decoration: none; color: #fff;}
-a{text-decoration: none; color: #fff;}
-.header_menu_item a:hover{color: #fff;display: block;}
-.header_menu_item a:hover{background: #51855e; padding: 10px;}
-.header_icon_bar{display: block; float: right; padding: 20px; display: none;}
+.menu-container{width:100%; height: 0px; overflow: hidden;}
+.header_menu_item{display: block; padding:20px; text-align: center;}
+.header_menu_item a:hover{color: #fff;display: block;padding: 15px;}
+.header_menu_item a:hover{background:#000;}
+.header_icon_bar{display: block; float: right; padding: 20px; }
 .header_icon_bar span{display: block; height:3px; width:30px; background: #fff; margin-bottom: 5px;}
+.is-open{height:767px ; overflow: auto;}
 
 .menu-container{border: 2px; margin:0px; overflow: hidden; }
 .menu-container{float:right; margin: 0px; padding: 0px;}
-.contenitore-titolo{background-color: #51855e;}
-.contenitore-main{background-color: #51855e; height: 100%;}
+
+.cover_copy{background-color: #51855e; height:90%}
+.cover_copy img{ display: block; margin: auto; height: 40%; padding-top: 100px;}
+.cover_copy h1,h4{color: #fff; text-align: center; font-family: "Papyrus";  margin:0px;}
+
 .footer-container{text-align:right; border: 5px; margin:0px; padding:20px;background-color: #264a2f;}
 .footer-container li{color:#fff; display: inline-block;}
 
-img {width 100px; height: 100px; align-content: center;}
-.cover,
-.cover2{color: #fff; text-align: center; font-family: "Papyrus"; margin: 0%; padding: auto;}
+@media(max-width: 767px){
+  .cover_copy img{padding-top: 200px; height: 20%;}
+  .cover_copy{height: 100%;}
+  .cover_copy h1{padding: 9px}
+}
 .clearfix:after {
     visibility: hidden;
     display: block;
