--- a/styleCwach.css
+++ b/styleCwach.css
@@ -17,7 +17,7 @@ li,a{text-decoration: none; color: #fff;}
 .cover_copy img{ display: block; margin: auto; height: 40%; padding-top: 100px;}
 .cover_copy h1,h4{color: #fff; text-align: center; font-family: "Papyrus";  margin:0px;}
 
-.footer-container{text-align:right; border: 5px; margin:0px; padding:20px;background-color: #264a2f;}
+.footer-container{text-align:center; border: 5px; margin:0px; padding:20px;background-color: #264a2f;}
 .footer-container li{color:#fff; display: inline-block;}
 
 @media(max-width: 767px){
