--- a/styleCwach.css
+++ b/styleCwach.css
@@ -5,7 +5,7 @@ li,a{text-decoration: none; color: #fff;}
 .menu-container{width:100%; height: 0px; overflow: hidden;}
 .header_menu_item{display: block; padding:20px; text-align: center;}
 .header_menu_item a:hover{color: #fff;display: block;padding: 15px;}
-.header_menu_item a:hover{background:#000;}
+.header_menu_item a:hover{color:#cf37c3;}
 .header_icon_bar{display: block; float: right; padding: 20px; }
 .header_icon_bar span{display: block; height:3px; width:30px; background: #fff; margin-bottom: 5px;}
 .is-open{height:767px ; overflow: auto;}
