--- a/styleCwach.css
+++ b/styleCwach.css
@@ -1,10 +1,11 @@
 html,body{ height:100%; width:100%;}
 header{background-color: #264a2f;}
-li,a{text-decoration: none; color: #fff;}
+a{text-decoration: none; color: #fff;}
+li{color:#cf37c3;}
 
 .menu-container{width:100%; height: 0px; overflow: hidden;}
 .header_menu_item{display: block; padding:20px; text-align: center;}
-.header_menu_item a:hover{color: #fff;display: block;padding: 15px;}
+.header_menu_item a:hover{color: #fff;display: block;}
 .header_menu_item a:hover{color:#cf37c3;}
 .header_icon_bar{display: block; float: right; padding: 20px; }
 .header_icon_bar span{display: block; height:3px; width:30px; background: #fff; margin-bottom: 5px;}
@@ -13,7 +14,7 @@ li,a{text-decoration: none; color: #fff;}
 .menu-container{border: 2px; margin:0px; overflow: hidden; }
 .menu-container{float:right; margin: 0px; padding: 0px;}
 
-.cover_copy{background-color: #51855e; height:90% ;}
+.cover_copy{background-color: #e2a22b; height:90% ;}
 .cover_copy img{ display: block; margin: auto; height: 40%; padding-top: 100px;}
 .cover_copy h1,h4{color: #fff; text-align: center; font-family: "Papyrus";  margin:0px;}
 
