--- a/styleCwach.css
+++ b/styleCwach.css
@@ -1,29 +1,29 @@
 html,body{ height:100%; width:100%;}
-header{background-color: #264a2f;}
+header{background-color: black;}
 a{text-decoration: none; color: #fff;}
-li{color:#cf37c3;}
+li{color:#edb342;}
 
-.menu-container{width:100%; height: 0px; overflow: hidden;}
+.menu-container{width:100%; height: 0px; overflow: hidden; }
 .header_menu_item{display: block; padding:20px; text-align: center;}
-.header_menu_item a:hover{color: #fff;display: block;}
-.header_menu_item a:hover{color:#cf37c3;}
+.header_menu_item a:hover{color: #edb342;display: block;}
+.header_menu_item a:hover{color:#edb342;}
 .header_icon_bar{display: block; float: right; padding: 20px; }
-.header_icon_bar span{display: block; height:3px; width:30px; background: #fff; margin-bottom: 5px;}
+.header_icon_bar span{display: block; height:3px; width:30px; background: #edb342; margin-bottom: 5px;}
 .is-open{height:767px ; overflow: auto;}
 
 .menu-container{border: 2px; margin:0px; overflow: hidden; }
 .menu-container{float:right; margin: 0px; padding: 0px;}
 
-.cover_copy{background-color: #e2a22b; height:90% ;}
+.cover_copy{background-color: #edb342; height:90% ;}
 .cover_copy img{ display: block; margin: auto; height: 40%; padding-top: 100px;}
-.cover_copy h1,h4{color: #fff; text-align: center; font-family: "Papyrus";  margin:0px;}
+.cover_copy h1,h4{color: #000; text-align: center; font-family: "Papyrus";  margin:0px;}
 
-.footer-container{text-align:center; border: 5px; margin:0px; padding:20px;background-color: #264a2f;}
-.footer-container li{color:#fff; display: inline-block;}
+.footer-container{text-align:center; border: 5px; margin:0px; padding:20px;background-color: black;}
+.footer-container li{color:#edb342; display: inline-block;}
 
 @media(max-width: 767px){
   .cover_copy img{padding-top: 200px; height: 20%;}
-  .cover_copy{height: 100%;}
+  .cover_copy{height: 767px;}
   .cover_copy h1{padding: 9px}
 }
 .clearfix:after {
