--- a/styleCwach.css
+++ b/styleCwach.css
@@ -1,4 +1,3 @@
-html,body{ height:100%; width:100%; }
 header{background-color: black;}
 a{text-decoration: none; color: #fff;}
 li{color:#edb342;}
@@ -11,7 +10,7 @@ li{color:#edb342;}
 .header_icon_bar span{display: block; height:3px; width:30px; background: #edb342; margin-bottom: 5px;}
 .is-open{height: 767px ; overflow:auto; position:absolute;background-color: black;z-index:2;}
 
-.cover_copy{background-color: #edb342; height:90% ;position:relative;z-index:1;}
+.cover_copy{background-color: #edb342; height:90vh ;position:relative;z-index:1;}
 .cover_copy img{ display: block; margin: auto; height: 40%; padding-top: 100px;}
 .cover_copy h1,h4{color: #000; text-align: center; font-family: "Papyrus";  margin:0px;}
 
