--- a/styleCwach.css
+++ b/styleCwach.css
@@ -1,7 +1,8 @@
 header{background-color: black;}
-a{text-decoration: none; color: #fff;}
+a{text-decoration: none; color:#000;}
 li{color:#edb342;}
 
+.menu-container a{color:white;}
 .menu-container{width:100%; height: 0px; overflow: hidden;}
 .header_menu_item{display: block; padding:20px; text-align: center;}
 .header_menu_item a:hover{color: #edb342;display: block;}
