--- a/styleCwach.css
+++ b/styleCwach.css
@@ -2,6 +2,7 @@ header{background-color: black;}
 a{text-decoration: none; color:#000;}
 li{color:#edb342;}
 
+
 .menu-container a{color:white;}
 .menu-container{width:100%; height: 0px; overflow: hidden;}
 .header_menu_item{display: block; padding:20px; text-align: center;}
@@ -16,8 +17,8 @@ li{color:#edb342;}
 .cover_copy img{ display: block; margin: auto; height: 40%; padding-top: 100px;}
 .cover_copy h1,h4{color: #000; text-align: center; font-family: "Papyrus";  margin:0px;}
 
-.presentazione{margin:0 ; padding:0; height:100vh; display:flex; justify-content:center; align-items:center; background: rgb(0, 0, 0);}
-.slider{width:800px; height: 500px; overflow: hidden ;margin: auto; float: left;}
+.presentazione{ padding:0; height:100vh; display:flex; background-color: #000; }
+.slider{width:800px; height: 500px; overflow: hidden; float: left; margin-top: 20px; margin-left: 50px;}
 .slides{width:500%; height:500px; display: flex;}
 .slide_first{ width:20%; height:500px; display: flex;}
 .slides input{display:none;}
