--- a/styleCwach.css
+++ b/styleCwach.css
@@ -17,13 +17,13 @@ li{color:#edb342;}
 .cover_copy img{ display: block; margin: auto; height: 40%; padding-top: 100px;}
 .cover_copy h1,h4{color: #000; text-align: center; font-family: "Papyrus";  margin:0px;}
 
-.presentazione{ padding:0; height:100vh; display:flex; background-color: #000; }
-.slider{width:800px; height: 500px; overflow: hidden; float: left; margin-top: 20px; margin-left: 50px;}
+.presentazione{ padding:0; height:100vh; display:flex; background-color: #000000; }
+.slider{width:450px; height: 500px; overflow: hidden; float: left; margin-left: 200px;margin-top: 70px;}
 .slides{width:500%; height:500px; display: flex;}
-.slide_first{ width:20%; height:500px; display: flex;}
+.slide_first{ width:20%; height:500px; display: flex;;}
 .slides input{display:none;}
 .slide { width:20%;}
-.slide img{ width:800px; height: 500px;}
+.slide img{ width:450px; height: 500px;object-fit: cover;}
 .navigation_manual{
     position:absolute;width: 800px;
     margin-top: -40px;
@@ -37,6 +37,10 @@ li{color:#edb342;}
 #radio2:checked ~ .slide_first{margin-left: -20%;}
 #radio3:checked ~ .slide_first{margin-left: -40%;}
 #radio4:checked ~ .slide_first{margin-left: -60%;}
+.container{background-color: white;float:right;margin-top: 70px;margin-right: 200px;width:450px; height: 500px; }
+.container h2{font-family:Verdana, Geneva, Tahoma, sans-serif;text-align: center;margin-top: 80px;}
+.container p{margin-left:50px;margin-right:50px; margin-top:80px; text-align: center;}
+
 
 .footer-container{text-align:center; border: 5px; margin:0px; padding:20px;background-color: black;}
 .footer-container li{color:#edb342; display: inline-block;}
