--- a/styleCwach.css
+++ b/styleCwach.css
@@ -17,10 +17,11 @@ li{color:#edb342;}
 .cover_copy img{ display: block; margin: auto; height: 40%; padding-top: 100px;}
 .cover_copy h1,h4{color: #000; text-align: center; font-family: "Papyrus";  margin:0px;}
 
-.presentazione{ padding:0; height:100vh; display:flex; background-color: #000000; }
-.slider{width:450px; height: 500px; overflow: hidden; float: left; margin-left: 200px;margin-top: 70px;}
+.presentazione1{padding:0; height:100vh; display:flex; background-color: #ffffff;}
+.presentazione{ padding:0; height:100vh; display:flex; background-color: #000000;}
+.slider{width:450px; height: 500px; overflow: hidden; float: left; margin-top: 70px;}
 .slides{width:500%; height:500px; display: flex;}
-.slide_first{ width:20%; height:500px; display: flex;;}
+.slide_first{ width:20%; height:500px; display: flex;}
 .slides input{display:none;}
 .slide { width:20%;}
 .slide img{ width:450px; height: 500px;object-fit: cover;}
@@ -29,18 +30,19 @@ li{color:#edb342;}
     margin-top: -40px;
     display: flex;
     justify-content: center;}
-.manual-btn{border: 2px solid rgb(255, 255, 255);padding: 5px; border-radius: 10px;cursor:pointer;transition: 2s;}
-.manual-btn:not(:last-child){margin-right: 40px;}
+.manual-btn{border: 2px solid #edb342;padding: 5px; border-radius: 10px;cursor:pointer;transition: 2s;}
+.manual-btn:not(:last-child){margin-right: 20px;}
 .manual-btn:hover{background: black;}
 
 #radio1:checked ~ .slide_first{margin-left: 0;}
 #radio2:checked ~ .slide_first{margin-left: -20%;}
 #radio3:checked ~ .slide_first{margin-left: -40%;}
 #radio4:checked ~ .slide_first{margin-left: -60%;}
-.container{background-color: white;float:right;margin-top: 70px;margin-right: 200px;width:450px; height: 500px; }
-.container h2{font-family:Verdana, Geneva, Tahoma, sans-serif;text-align: center;margin-top: 80px;}
-.container p{margin-left:50px;margin-right:50px; margin-top:80px; text-align: center;}
-
+.container_slide{margin-left: 50px;}
+.container{background-color:#edb342;float:right;margin-top: 70px;width:450px; height: 500px;}
+.container h2{font-family: 'Inter', sans-serif; font-family: 'Poppins', sans-serif;;text-align: center;margin-top: 80px;color: white;}
+.container p{margin-left:50px;margin-right:50px; margin-top:80px; text-align: center;color: white;font-family: 'Inter', sans-serif; font-family: 'Poppins', sans-serif;}
+.container-s{margin-left: 350px;}
 
 .footer-container{text-align:center; border: 5px; margin:0px; padding:20px;background-color: black;}
 .footer-container li{color:#edb342; display: inline-block;}
