--- a/styleCwach.css
+++ b/styleCwach.css
@@ -10,7 +10,7 @@ li{color:#edb342;}
 .header_menu_item a:hover{color:#edb342;}
 .header_icon_bar{display: block; float: right; padding: 20px; }
 .header_icon_bar span{display: block; height:3px; width:30px; background: #edb342; margin-bottom: 5px;}
-.is-open{height: auto; overflow:auto; position:absolute;background-color: black;z-index:2;}
+.is-open{height: 767px; overflow:auto; position:absolute;background-color: black;z-index:2;}
 
 
 .cover_copy{background-color: #edb342; height:90vh ;position:relative;z-index:1; padding: 20px;}
@@ -25,11 +25,7 @@ li{color:#edb342;}
 .slides input{display:none;}
 .slide { width:20%;}
 .slide img{ width:450px; height: 500px;object-fit: cover;}
-.navigation_manual{
-    position:absolute;width: 800px;
-    margin-top: -40px;
-    display: flex;
-    justify-content: center;}
+.navigation_manual{position:absolute;width: 800px;margin-top: -40px;display: flex;justify-content: center;}
 .manual-btn{border: 2px solid #edb342;padding: 5px; border-radius: 10px;cursor:pointer;transition: 2s;}
 .manual-btn:not(:last-child){margin-right: 20px;}
 .manual-btn:hover{background: black;}
