--- a/styleCwach.css
+++ b/styleCwach.css
@@ -6,8 +6,7 @@ li{color:#edb342;}
 .menu-container a{color:white;}
 .menu-container{width:100%; height: 0px; overflow: hidden;}
 .header_menu_item{display: block; padding:20px; text-align: center;}
-.header_menu_item a:hover{color: #edb342;display: block;}
-.header_menu_item a:hover{color:#edb342;}
+.header_menu_item a:hover{color: #edb342;}
 .header_icon_bar{display: block; float: right; padding: 20px; }
 .header_icon_bar span{display: block; height:3px; width:30px; background: #edb342; margin-bottom: 5px;}
 .is-open{height: 767px; overflow:auto; position:absolute;background-color: black;z-index:2;}
@@ -39,6 +38,9 @@ li{color:#edb342;}
 .container h2{font-family: 'Inter', sans-serif; font-family: 'Poppins', sans-serif;;text-align: center;margin-top: 80px;color: white;}
 .container p{margin-left:50px;margin-right:50px; margin-top:80px; text-align: center;color: white;font-family: 'Inter', sans-serif; font-family: 'Poppins', sans-serif;}
 .container-s{margin-left: 350px;}
+
+.card img{float:right;}
+
 
 .footer-container{text-align:center; border: 5px; margin:0px; padding:20px;background-color: black;}
 .footer-container li{color:#edb342; display: inline-block;}
