--- a/styleCwach.css
+++ b/styleCwach.css
@@ -17,15 +17,15 @@ ul{margin: 0%; padding: 0%;}
 .cover_copy img{ display: block; margin: auto; height: 40%; padding-top: 100px;}
 .cover_copy h1,h4{color: #000; text-align: center; font-family: "Papyrus";  margin:0px;}
 
-.presentazione1{padding:0; height:100vh; display:flex; background-color: #ffffff;}
+#ps1{background-color: #fff;}
 .presentazione{ padding:0; height:100vh; display:flex; background-color: #000000;}
-.slider{width:450px; height: 500px; overflow: hidden; float: left; margin-top: 70px;}
-.slides{width:500%; height:500px; display: flex;}
-.slidefirst{ width:20%; height:500px; display: flex;}
+.slider{width:50%;height: 100%; overflow: hidden; float: left; }
+.slides{width:500%; height:100%; display: flex;}
+.slidefirst{ width:20%; height:100%; display: flex;}
 .slides input{display:none;}
 .slide { width:20%;transition: 0.6s;}
 #sl1{float: right;}
-.slide img{ width:450px; height: 500px;object-fit: cover;}
+.slide img{ object-fit: cover;width:100%; height: 100%;}
 
 .navigation_manual{width: 800px;margin-top: -40px;display: flex;margin-left: 300px;}
 .manual-btn{border: 2px solid #edb342;padding: 5px; border-radius: 10px;cursor:pointer;transition: 2s;}
@@ -44,11 +44,11 @@ ul{margin: 0%; padding: 0%;}
 #radio6:checked ~ .first{margin-left: -20%;}
 #radio7:checked ~ .first{margin-left: -40%;}
 #radio8:checked ~ .first{margin-left: -60%;}
-.container_slide{margin-left: 50px;}
-.container{background-color:#edb342;float:right;margin-top: 70px;width:450px; height: 500px;}
+#cs1{margin-left:20%;}
+.container_slide{margin-left: 50px;margin-top: 70px; margin-bottom: 70px; width: 70%;}
+.container{background-color:#edb342;float:right;width:50%;height: 100%;}
 .container h2{font-family: 'Inter', sans-serif; font-family: 'Poppins', sans-serif;;text-align: center;margin-top: 80px;color: white;}
 .container p{margin-left:50px;margin-right:50px; margin-top:80px; text-align: center;color: white;}
-.container-s{margin-left: 350px;}
 .container li{font-family: 'Inter', sans-serif;display: block; font-family: 'Poppins', sans-serif;text-align: center; padding: 20px;color: white;}
 
 .footer-container{text-align:center; border: 5px; margin:0px; padding:20px;background-color: black;}
