--- a/styleCwach.css
+++ b/styleCwach.css
@@ -25,15 +25,13 @@ ul{margin: 0%; padding: 0%;}
 .slides input{display:none;}
 .slide { width:20%;transition: 0.6s;}
 #sl1{float: right;}
-.slide img{ object-fit: cover;width:100%; height: 100%;}
+.slider img{ object-fit: cover;width:100%; height: 100%;}
 
 .navigation_manual{width: 800px;margin-top: -40px;display: flex;margin-left: 300px;}
 .manual-btn{border: 2px solid #edb342;padding: 5px; border-radius: 10px;cursor:pointer;transition: 2s;}
 .manual-btn:not(:last-child){margin-right: 20px;}
 .manual-btn:hover{background: black;}
 
-.card{display: flex; margin-left: 150px;;}
-.card img{ width: 450px;height: 500px;object-fit: cover;float: right;margin-top: 70px;margin-bottom: 70px;}
 
 #radio1:checked ~ .first{margin-left: 0;}
 #radio2:checked ~ .first{margin-left: -20%;}
