--- a/styleCwach.css
+++ b/styleCwach.css
@@ -59,7 +59,8 @@ ul{margin: 0%; padding: 0%;}
   .cover_copy h1{padding: 9px}
   .container_slide{width: 100%;margin-left: 0px;}
   #cs1{margin-left:0px;}
-  
+  .container p{margin-left:10px;margin-right:10px; margin-top:20px; text-align: left;}
+  .container h2{margin-top: 175px;}
 }
 .clearfix:after {
     visibility: hidden;
