--- a/styleCwach.css
+++ b/styleCwach.css
@@ -28,7 +28,7 @@ ul{margin: 0%; padding: 0%;}
 #sl1{float: right;}
 .slider img{ object-fit: cover;width:100%; height: 100%;}
 
-.navigation_manual{width: 800px;margin-top: -40px;display: flex;margin-left: 300px;}
+.navigation_manual{width: 50%;margin-top: -20%;display: flex;margin-left: 30%;}
 .manual-btn{border: 2px solid #edb342;padding: 5px; border-radius: 10px;cursor:pointer;transition: 2s;}
 .manual-btn:not(:last-child){margin-right: 20px;}
 .manual-btn:hover{background: black;}
@@ -44,23 +44,23 @@ ul{margin: 0%; padding: 0%;}
 #radio7:checked ~ .first{margin-left: -40%;}
 #radio8:checked ~ .first{margin-left: -60%;}
 #cs1{margin-left:20%;}
-.container_slide{margin-left: 50px;margin-top: 70px; margin-bottom: 70px; width: 70%;}
+.container_slide{margin-left: 10%;margin-top: 5%; margin-bottom: 5%; width: 70%;}
 .container{background-color:#edb342;float:right;width:50%;height: 100%;}
 .container h2{font-family: 'Inter', sans-serif; font-family: 'Poppins', sans-serif;;text-align: center;margin-top: 80px;color: white;}
-.container p{margin-left:50px;margin-right:50px; margin-top:80px; text-align: center;color: white;}
+.container p{margin-left:10%;margin-right:10%; margin-top:20%; text-align: center;color: white;}
 .container li{font-family: 'Inter', sans-serif;display: block; font-family: 'Poppins', sans-serif;text-align: center; padding: 20px;color: white;}
 
-.footer-container{text-align:center; border: 5px; margin:0px; padding:20px;background-color: black;}
+.footer-container{text-align:center; border: 5pxs; margin:0px; padding:20px;background-color: black;}
 .footer-container li{color:#edb342; display: inline-block;}
 
 @media(max-width: 767px){
   .cover_copy img{padding-top: 200px; height: 20%;}
   .cover_copy{height: 767px;}
   .cover_copy h1{padding: 9px}
-  .container_slide{width: 100%;margin-left: 0px;}
-  #cs1{margin-left:0px;}
-  .container p{margin-left:10px;margin-right:10px; margin-top:20px; text-align: left;}
-  .container h2{margin-top: 175px;}
+  .container_slide{width: 100%;margin-left: 0%;}
+  #cs1{margin-left:0%;}
+  .container p{margin-left:5%;margin-right:5%; margin-top:10%; text-align: left; font-size: 20px;}
+  .container h2{margin-top: 40%; font-size: 40px;}
 }
 .clearfix:after {
     visibility: hidden;
