--- a/styleCwach.css
+++ b/styleCwach.css
@@ -18,6 +18,8 @@ ul{margin: 0%; padding: 0%;}
 .cover_copy img{ display: block; margin: auto; height: 40%; padding-top: 100px;}
 .cover_copy h1,h4{color: #000; text-align: center; font-family: "Papyrus";  margin:0px;}
 
+h5{font-family: 'Times New Roman', Times, serif; color: white; padding-left: 10px; padding-right: 10px; text-align: center;}
+h2{font-family: 'Times New Roman', Times, serif;}
 
 .presentazione{ padding:0; height:100vh; display:flex; background-color: #000000;}
 .slider{width:50%;height: 100%; overflow: hidden; float: left; }
@@ -46,8 +48,8 @@ ul{margin: 0%; padding: 0%;}
 #radio8:checked ~ .first{margin-left: -60%;}
 #cs1{margin-left:20%;}
 .container_slide{margin-left: 10%;margin-top: 5%; margin-bottom: 5%; width: 70%;}
-.container{background-color:#edb342;float:right;width:50%;height: 100%;}
 .container h2{font-family: 'Inter', sans-serif; font-family: 'Poppins', sans-serif;text-align: center;margin-top: 25%;color: white;}
+.container{background-color:#edb342;float:right;width:50%;height: 100%;}
 .container p{margin-left:10%;margin-right:10%; margin-top: 20%; text-align: center;color: white;}
 .container li{font-family: Verdana, Geneva, Tahoma, sans-serif;display: block; font-family: 'Poppins', sans-serif;text-align: center; padding: 20px;color: white;}
 
