--- a/styleCwach.css
+++ b/styleCwach.css
@@ -3,7 +3,7 @@ a{text-decoration: none; color:#000;}
 li{color:#edb342;}
 body{background-color:#000;}
 ul{margin: 0%; padding: 0%;}
-p{font-family: 'Ubuntu', sans-serif;}
+p,li{font-family: 'Ubuntu', sans-serif;}
 h2,h1,h4 {font-family:"Papyrus";}
 
 
@@ -52,7 +52,7 @@ h2,h1,h4 {font-family:"Papyrus";}
 .container h2{text-align: center;margin-top: 25%;color: white;}
 .container{background-color:#edb342;float:right;width:50%;height: 100%;}
 .container p{margin-left:10%;margin-right:10%; text-align: center;color: white;}
-.container li{display: block; text-align: center; padding: 20px;color: white;}
+.container li{display: block; text-align: center; padding: 20px;color: white;font: size 40px;}
 
 .footer-container{text-align:center; border: 5pxs; margin:0px; padding:20px;background-color: black;}
 .footer-container li{color:#edb342; display: inline-block;}
