--- a/styleCwach.css
+++ b/styleCwach.css
@@ -1,5 +1,5 @@
 header{background-color: black;}
-a{text-decoration: none; color:#000;}
+a{text-decoration: none; color:#ffffff;}
 li{color:#edb342; font-family: papyrus;}
 body{background-color:#000;}
 ul{margin: 0%; padding: 0%;}
@@ -7,13 +7,16 @@ p,li{font-family: 'Ubuntu', sans-serif;}
 h2,h1,h4 {font-family:"Papyrus";}
 
 
-.menu-container a{color:white;}
-.menu-container{width:100%; height: 0px; overflow: hidden;}
-.header_menu_item{display: block; padding:20px; text-align: center;}
-.header_menu_item a:hover{color: #edb342;}
-.header_icon_bar{display: block; float: right; padding: 20px; }
-.header_icon_bar span{display: block; height:3px; width:30px; background: #edb342; margin-bottom: 5px;}
-.is-open{height: 767px; overflow:auto; position:absolute;background-color: black;z-index:2;}
+.menu-container{ text-align:center; border: 2px; margin:0px; }
+header{ padding: 15px 15px 5px 15px; margin: 20px}
+
+.header_logo{float: left; padding: 20px; display: block;}
+.menu-container{float:right; margin: 0px; padding: 0px;}
+.header_menu_item{display: inline-block; padding:20px; text-decoration: none;}
+.header_menu_item a:hover{color: black;display: block; padding-left: 10px; padding-right: 10px;}
+.header_menu_item a:hover{background:rgb(252, 252, 252)}
+.header_icon_bar{display: block; float: right; padding: 20px; display: none;}
+.header_icon_bar span{display: block; height:3px; width:30px; background:#edb342; margin-bottom: 5px;}
 
 .cover_copy{background-color: #edb342; height:90vh ;position:relative;z-index:1; padding: 20px;}
 .cover_copy img{ display: block; margin: auto; height: 40%; padding-top: 100px;}
@@ -99,6 +102,10 @@ input::placeholder{color: rgb(22, 22, 22);}
   right:20px;
 }
 @media(max-width: 767px){
+  .header_icon_bar{display: block;}
+  .header_menu_item{display:block;}
+  .menu-container{width:100%; height: 0px; overflow: hidden;}
+  .is-open{height:767px ; overflow: auto;}
   .cover_copy img{padding-top: 200px; height: 20%;}
   .cover_copy{height: 767px;}
   .cover_copy h1{padding: 9px}
