--- a/styleCwach.css
+++ b/styleCwach.css
@@ -7,15 +7,14 @@ p,li{font-family: 'Ubuntu', sans-serif;}
 h2,h1,h4 {font-family:"Papyrus";}
 
 
-.menu-container{ text-align:center; border: 2px; margin:0px; }
-header{ padding: 15px 15px 5px 15px; margin: 20px}
+.menu-container{ text-align:center; border: 0px; margin:0px; }
+header{ padding: 10px x; margin: 10px}
 
 .header_logo{float: left; padding: 20px; display: block;}
 .menu-container{float:right; margin: 0px; padding: 0px;}
-.header_menu_item{display: inline-block; padding:20px; text-decoration: none;}
-.header_menu_item a:hover{color: black;display: block; padding-left: 10px; padding-right: 10px;}
-.header_menu_item a:hover{background:rgb(252, 252, 252)}
-.header_icon_bar{display: block; float: right; padding: 20px; display: none;}
+.header_menu_item{display: inline-block; padding: 10px; text-decoration: none;}
+.header_menu_item a:hover{color: black;display: block;background:rgb(252, 252, 252) }
+.header_icon_bar{display: block; float: right; padding: 10px; display: none;}
 .header_icon_bar span{display: block; height:3px; width:30px; background:#edb342; margin-bottom: 5px;}
 
 .cover_copy{background-color: #edb342; height:90vh ;position:relative;z-index:1; padding: 20px;}
@@ -104,21 +103,19 @@ input::placeholder{color: rgb(22, 22, 22);}
 @media(max-width: 767px){
   .header_icon_bar{display: block;}
   .header_menu_item{display:block;}
-  .menu-container{width:100%; height: 0px; overflow: hidden;}
+  .menu-container{width:100%; height: 0px;overflow: hidden;}
   .is-open{height:767px ; overflow: auto;}
+
   .cover_copy img{padding-top: 200px; height: 20%;}
   .cover_copy{height: 767px;}
   .cover_copy h1{padding: 9px}
   .container_slide{width: 100%;margin-left: 0%;}
   #cs1{margin-left:0%;}
-  .container p{margin-left:1%;margin-right:1%; margin-top:25%;text-align: center; font-size: 20px;}
+  .container p{margin: 25% 1% 0% 1%; font-size: 20px;}
   .container h2{margin-top: 40%; font-size: 35px;}
-  .container li{font-family: Garamond;display: block; text-align: center; padding: 15px;color: white; font-size: 20px;}
+  .container li{font-size: 20px;}
   .container ul{margin-top: 20%;}
-  .container h2{font-family: papyrus;text-align: center;margin-top: 25%;color: white; margin-left: 5%; margin-right: 5%;}
-  .container h5{text-align: center; margin-left: 5%; margin-right: 5%;}
-
-  
+  .container h2{margin-left: 5%; margin-right: 5%;}
 }
 .clearfix:after {
     visibility: hidden;
