--- a/styleCwach.css
+++ b/styleCwach.css
@@ -90,8 +90,22 @@ input::placeholder{color: rgb(22, 22, 22);}
 .map iframe{width: 100%; height: 100%;}
 
 
-.footer-container{text-align:center; border: 5pxs; margin:0px; padding:20px;background-color: black;}
-.footer-container li{color:#edb342; display: inline-block;}
+.footer-container{ display: flex;margin: auto;width: 80%;}
+.footer-container h3,p{color:#ffffff;display: inline;}
+.footer-container p{float: right;}
+.footer-container-contatti{flex-grow: 1;position: relative;}
+.footer-container-contatti ul{display: flex;position:absolute;justify-content: end;}
+.footer-container-contatti img{width: 100%; height: auto;}
+.footer-container-contatti li{display:block; width: 15%;padding:10px;}
+.footer-container-orari{flex-grow: 1;margin-left:10%;}
+.footer-container-orari h3{float:left; }
+.footer-container-orari li{display: inline-block; width: 50%;margin-left:2%; color: white; }
+.footer-container-posto{flex-grow:0.5;}
+.footer-container-posto h3,p{margin:0px;}
+
+.footer-container-copyright p{color:#ffffff;}
+.footer-container-copyright {margin:10% 25% 2% 25% ;}
+
 
 .img-res{height: auto; width: 100%;}
 .wa-link{
@@ -117,6 +131,10 @@ input::placeholder{color: rgb(22, 22, 22);}
   .container li{font-size: 15px;}
   .container ul{margin-top: 20%;}
   .container h2{margin-left: 5%; margin-right: 5%;}
+
+  .footer-container{display: flex;flex-direction: column;}
+  .footer-container-orari{margin: 12% 0% 10% 0%;}
+  .footer-container-copyright {margin:10% 5% 2% 5% ; text-align: center;}
 }
 .clearfix:after {
     visibility: hidden;
