--- a/styleCwach.css
+++ b/styleCwach.css
@@ -133,7 +133,8 @@ input::placeholder{color: rgb(22, 22, 22);}
   .container h2{margin-left: 5%; margin-right: 5%;}
 
   .footer-container{display: flex;flex-direction: column;}
-  .footer-container-orari{margin: 12% 0% 10% 0%;}
+  .footer-container-contatti li{display:block; width: 5%;padding:10px;}
+  .footer-container-orari{flex-grow: 1;margin: 12% 0% 10% 0%;}
   .footer-container-copyright {margin:10% 5% 2% 5% ; text-align: center;}
 }
 .clearfix:after {
