--- a/styleCwach.css
+++ b/styleCwach.css
@@ -5,6 +5,7 @@ body{background-color:#000;}
 ul{margin: 0%; padding: 0%;}
 p,li{font-family: 'Ubuntu', sans-serif;}
 h2,h1,h4 {font-family:"Papyrus";}
+h2{text-align: center;margin-top: 25%;color: white;}
 
 
 .menu-container{ text-align:center; border: 0px; margin:0px; }
@@ -70,9 +71,8 @@ h2,h1,h4 {font-family:"Papyrus";}
 
 #cs1{margin-left:20%;}
 .container_slide{margin-left: 10%;margin-top: 5%; margin-bottom: 5%; width: 70%;}
-.container h2{text-align: center;margin-top: 25%;color: white;}
 .container{background-color:#edb342;float:right;width:50%;height: 100%;}
-.container p{margin: 10% 10% 0% 10%; text-align: center;color: white;}
+.container_slide p{margin: 10% 10% 0% 10%; text-align: center;color: white;}
 .container li{display: block; text-align: center; padding: 20px;color: white;font: size 40px;}
 
 /* modifica contatti*/
@@ -92,16 +92,18 @@ input::placeholder{color: rgb(22, 22, 22);}
 .map iframe{width: 100%; height: 100%;}
 
 
-.footer-container{ display: flex;margin: auto;width: 80%;}
-.footer-container h3,p{color:#ffffff;display: inline;}
-.footer-container p{float: right;}
+.footer-container{ display: flex;margin: auto;margin-top:5% ;width: 80%;}
+.footer p{float: right;}
+.footer-container-contatti p,h3{color:#ffffff;display: inline;}
 .footer-container-contatti{flex-grow: 1;position: relative;}
 .footer-container-contatti ul{display: flex;position:absolute;justify-content: end;}
 .footer-container-contatti img{width: 100%; height: auto;}
 .footer-container-contatti li{display:block; width: 15%;padding:10px;}
+.footer-container-orari p,h3{color:#ffffff;display: inline;}
 .footer-container-orari{flex-grow: 1;margin-left:10%;}
 .footer-container-orari h3{float:left; }
 .footer-container-orari li{display: inline-block; width: 50%;margin-left:2%; color: white; }
+.footer-container-posto p,h3{color:#ffffff;display: inline;}
 .footer-container-posto{flex-grow:0.5;}
 .footer-container-posto h3,p{margin:0px;}
 
