--- a/styleCwach.css
+++ b/styleCwach.css
@@ -80,7 +80,7 @@ h2{text-align: center;margin-top: 25%;color: white;}
 .section_input{ align-items: center;justify-content: center;}
 .section_input input{ width:70%; margin: 10% 20% 0% 10%;padding:20px;border:0px; border-bottom: 1px solid black;
      background-color: #edb342; }
-.button{display: inline-block;border: 1px solid #060606;padding: 0.2% 30% 0.2% 30%; margin: 10% 20% 0% 20%; transition: all 0.4s ease-in-out;}
+.button{display: inline-block;border: 1px solid #060606;padding: 0% 30% 0.2% 30%; margin-top: 4%;margin-left:15% ; transition: all 0.4s ease-in-out;}
 .button:hover{color: white;background-color: rgb(0, 0, 0);transform: scale(1.1);}
 input:focus{outline: none;}
 input::placeholder{color: rgb(22, 22, 22);}
